<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Telco bridge</string>
    <string name="server_url">Server address</string>
    <string name="server_url_hint">https://your.domain</string>
    <string name="token">Phone token from the command centre</string>
    <string name="save">Save and connect</string>
    <string name="grant_sms">Allow reading text messages</string>
    <string name="battery">Turn off battery saving for this app</string>
    <string name="send_now">Send now</string>
    <string name="status_title">Status</string>
    <string name="pin">Transfer PIN of the SIM in this phone</string>
    <string name="pin_hint">Stays on this phone. Never sent anywhere.</string>
    <string name="save_pin">Save PIN</string>
    <string name="allow_sending">Allow sending from this SIM</string>
    <string name="service_title">Telco bridge is on</string>
    <string name="service_text">Forwarding messages and sending airtime when asked.</string>
</resources>
